SLING-11450 : avoid suppressing instances that were seen previously in the local cluster, prior to a topology change. With this, the partial-startup-suppression / joinerdelay feature again respects leaders as required by the API